Fix list of words fallback being truncated

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -41,7 +41,7 @@ body a:active {
 
 main {
 	display: flex;
-	height: 100%;
+	min-height: 100%;
 	max-width: 40rem;
 	margin: 0 auto;
 	flex-direction: column;
